Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-762

Compute stats doesn't propagate underlying error correctly.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 1.2.3
    • Impala 1.3.1
    • None
    • None

    Description

      Behavior observed from the shell:

      [localhost:21000] > compute stats functional.alltypes;
      Query: compute stats functional.alltypes
      Query aborted.
      

      Underlying cause is, for example: "No backends configured"

      Attachments

        Activity

          People

            alex.behm Alexander Behm
            alex.behm Alexander Behm
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: