shell/impala_shell.py
@@ -621,7 +621,6 @@ class ImpalaShell(cmd.Cmd):
         self.__print_error_log()
         break
       elif query_state == self.query_state["EXCEPTION"]:
-        print_to_stderr('Query aborted.')
         if self.connected:
           self.__print_error_log()
           # Close the query handle even if it's an insert.
@@ -768,8 +767,10 @@ class ImpalaShell(cmd.Cmd):
     rpc_result = self.__do_rpc(
         lambda: self.imp_service.get_log(self.last_query_handle.log_context))
     log, status = rpc_result.get_results()
+    if status != RpcStatus.OK:
+      print_to_stderr("Failed to get error log: %s" % status)
     if log and log.strip():
-      print_to_stderr("\nERRORS ENCOUNTERED DURING EXECUTION: %s" % log)
+      print_to_stderr("ERRORS: %s" % log)
 
   def do_alter(self, args):
     return self.__execute_query(self.__create_beeswax_query("alter %s" % args))
